[project]
authors = [
    {name = "OWASP BLT", email = "you@example.com"},
]
license = {text = "AGPLv3"}
requires-python = "<3.14,>=3.11.2"
dependencies = [
    "python-dotenv<2.0.0,>=1.1.0",
    "Django<6.0.0,>=5.1.8",
    "dj-database-url<3.0.0,>=2.3.0",
    "django-allauth<1.0.0,>=0.61.1",
    "beautifulsoup4<5.0.0,>=4.13.3",
    "django-email-obfuscator<1.0.0,>=0.1.5",
    "django-gravatar2<2.0.0,>=1.4.5",
    "django-import-export<5.0.0,>=4.3.7",
    "django-annoying<1.0.0,>=0.10.7",
    "dj-rest-auth<6.0.0,>=5.0.2",
    "user-agents<3.0.0,>=2.2.0",
    "whitenoise<7.0.0,>=6.9.0",
    "pylibmc<2.0.0,>=1.6.1",
    "psycopg2-binary<3.0.0,>=2.9.10",
    "protobuf<5.0.0,>=4.25.3",
    "django-storages[google]<2.0.0,>=1.14.6",
    "django-timedeltafield<1.0.0,>=0.7.10",
    "giturlparse-py<1.0.0,>=0.0.5",
    "gunicorn<24.0.0,>=23.0.0",
    "oauthlib<4.0.0,>=3.2.0",
    "python-openid<3.0.0,>=2.2.5",
    "pytz<2025.0,>=2024.1",
    "requests<3.0.0,>=2.32.3",
    "requests-oauthlib<2.0.0,>=1.3.1",
    "tablib<4.0.0,>=3.8.0",
    "ua-parser<2.0.0,>=1.0.1",
    "djangorestframework<4.0.0,>=3.16.0",
    "cffi<2.0.0,>=1.17.1",
    "django-mdeditor<1.0.0,>=0.1.20",
    "django-tz-detect<1.0.0,>=0.4.0",
    "django-star-ratings<1.0.0,>=0.9.2",
    "django-environ<1.0.0,>=0.12.0",
    "django-simple-captcha<1.0.0,>=0.6.2",
    "django-filter<25.0,>=24.3",
    "pillow<11.0.0,>=10.4.0",
    "sentry-sdk<3.0.0,>=2.25.1",
    "bitcash<2.0.0,>=1.0.2",
    "pydantic<3.0.0,>=2.10.6",
    "pydantic-core<3.0.0,>=2.18.4",
    "Markdown<4.0,>=3.6",
    "faiss-cpu<2.0.0,>=1.11.0",
    "psutil<6.0.0,>=5.9.8",
    "python-bitcoinrpc<2.0,>=1.0",
    "sendgrid<7.0.0,>=6.11.0",
    "atproto<1.0.0,>=0.0.55",
    "django-redis<6.0.0,>=5.4.0",
    "uvicorn<1.0.0,>=0.34.0",
    "channels<5.0.0,>=4.2.2",
    "channels-redis<5.0.0,>=4.2.1",
    "aiohttp<4.0.0,>=3.12.9",
    "drf-yasg<2.0.0,>=1.21.10",
    "slack-bolt<2.0.0,>=1.23.0",
    "slack-sdk<4.0.0,>=3.35.0",
    "tld==0.13",
    "openai<2.0.0,>=1.70.0",
    "async-timeout<5.0.0,>=4.0.3",
    "python-dateutil<3.0.0.0,>=2.9.0.post0",
    "pyzipper<1.0.0,>=0.3.6",
    "tweepy<5.0.0,>=4.15.0",
    "better-profanity<1.0.0,>=0.7.0",
    "django-bleach<4.0.0,>=3.1.0",
    "PyJWT<3.0.0,>=2.8.0",
]
name = "blt"
version = "0.1.0"
description = ""

[dependency-groups]
dev = [
    "black<25.0.0,>=24.8.0",
    "isort<6.0.0,>=5.13.2",
    "ruff<1.0.0,>=0.11.2",
    "pre-commit<4.0.0,>=3.8.0",
    "selenium<5.0.0,>=4.30.0",
    "webdriver-manager<5.0.0,>=4.0.2",
    "chromedriver-autoinstaller<1.0.0,>=0.6.4",
    "django-debug-toolbar<5.0.0,>=4.4.6",
    "django-livereload-server<1.0.0,>=0.5.1",
    "watchfiles<2.0.0,>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blt", "website", "comments"]

[tool.isort]
known_first_party = ["blt"]
line_length = 120
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff.lint]
# This is a temporary ignore list to address on a PR per category basis after the initial run.
ignore = ["E402", "E722", "F811", "F821", "F841", "T201"]
select = ["E4", "E7", "E9", "F", "T"]
