[project]
name = "blt"
version = "0.1.0"
description = "OWASP Bug Logging Tool - A web application for logging and tracking security bugs"
authors = [{ name = "OWASP BLT", email = "contact@example.com" }]
requires-python = ">=3.11.2,<3.14"
license = "AGPL-3.0-only"
dependencies = [
    "python-dotenv>=1.1.0,<2",
    "Django>=5.2.9,<6",
    "dj-database-url>=2.3.0,<3",
    "django-allauth>=65.13.1,<66",
    "beautifulsoup4>=4.14.3,<5",
    "django-email-obfuscator>=0.1.5,<0.2",
    "django-gravatar2>=1.4.5,<2",
    "django-import-export>=4.3.14,<5",
    "django-annoying>=0.10.7,<0.11",
    "dj-rest-auth>=5.0.2,<6",
    "user-agents>=2.2.0,<3",
    "whitenoise>=6.9.0,<7",
    "pylibmc>=1.6.1,<2",
    "psycopg2-binary>=2.9.10,<3",
    "protobuf>=4.25.3,<5",
    "django-storages[google]>=1.14.6,<2",
    "django-timedeltafield>=0.7.10,<0.8",
    "giturlparse.py>=0.0.5,<0.0.6",
    "gunicorn>=23.0.0,<24",
    "oauthlib>=3.2.0,<4",
    "python-openid>=2.2.5,<3",
    "pytz>=2024.1",
    "requests>=2.32.3,<3",
    "requests-oauthlib>=1.3.1,<2",
    "tablib>=3.8.0,<4",
    "ua-parser>=1.0.1,<2",
    "djangorestframework>=3.16.0,<4",
    "cffi>=1.17.1,<2",
    "django-mdeditor>=0.1.20,<0.2",
    "django-tz-detect>=0.4.0,<0.5",
    "django-star-ratings>=0.9.2,<0.10",
    "django-environ>=0.12.0,<0.13",
    "django-simple-captcha>=0.6.2,<0.7",
    "django-filter>=25.2,<26",
    "pillow>=10.4.0,<11",
    "sentry-sdk>=2.47.0,<3",
    "bitcash>=1.0.2,<2",
    "pydantic>=2.10.6,<3",
    "pydantic_core>=2.18.4,<3",
    "Markdown>=3.6,<4",
    "faiss-cpu>=1.11.0,<2",
    "psutil>=5.9.8,<6",
    "python-bitcoinrpc>=1.0,<2",
    "sendgrid>=6.11.0,<7",
    "atproto>=0.0.64,<0.1",
    "django-redis>=5.4.0,<6",
    "uvicorn>=0.34.0,<1",
    "channels>=4.2.2,<5",
    "channels-redis>=4.2.1,<5",
    "aiohttp>=3.12.9,<4",
    "drf-yasg>=1.21.10,<2",
    "slack-bolt>=1.23.0,<2",
    "slack-sdk>=3.35.0,<4",
    "tld>=0.13,<0.14",
    "openai>=2.9.0,<3",
    "async-timeout>=4.0.3,<5",
    "python-dateutil>=2.9.0.post0,<3",
    "pyzipper>=0.3.6,<0.4",
    "tweepy>=4.15.0,<5",
    "better-profanity>=0.7.0,<0.8",
    "django-bleach>=3.1.0,<4",
    "pyjwt[crypto]>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "black>=25.12.0,<26",
    "isort>=5.13.2,<6",
    "ruff>=0.14.8,<0.15",
    "pre-commit>=4.5.0,<5",
    "selenium>=4.30.0,<5",
    "webdriver-manager>=4.0.2,<5",
    "chromedriver-autoinstaller>=0.6.4,<0.7",
    "django-debug-toolbar>=4.4.6,<5",
    "django-livereload-server>=0.5.1,<0.6",
    "watchfiles>=1.0.4,<2",
]

[tool.isort]
known_first_party = ["blt"]
line_length = 120
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ['py311']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# This is a temporary ignore list to address on a PR per category basis after the initial run.
ignore = ["E402", "E722", "F811", "F821", "F841"]
select = ["E4", "E7", "E9", "F", "T"]

[tool.ruff.lint.extend-per-file-ignores]
# CLI tools and scripts where print is appropriate for user output
"pre-commit-hooks/check_style_tags.py" = ["T201"]
".github/scripts/auto_fix.py" = ["T201"]
# Settings file - print statements used for startup debugging
"blt/settings.py" = ["T201"]
# Migration files - print statements are acceptable in data migrations
"website/migrations/*.py" = ["T201"]
# Test files - commented out print statements for debugging
"website/tests/*.py" = ["T201"]
